@@ -194,7 +194,7 @@ def cookObject(repos, cfg, recipeClass, sourceVersion,
                allowUnknownFlags = False, allowMissingSource = False,
                ignoreDeps = False, logBuild = False,
                crossCompile = None, callback = None, 
-               requireCleanSources = False):
+               requireCleanSources = False, downloadonly = False):
     """
     Turns a recipe object into a change set, and sometimes commits the
     result.
@@ -215,6 +215,9 @@ def cookObject(repos, cfg, recipeClass, sourceVersion,
     @param prep: If true, the build stops after the package is unpacked
     and None is returned instead of a changeset.
     @type prep: boolean
+    @param downloadonly: If true, the lookaside is populated, and the None is
+    returned instead of a changeset.
+    @type downloadonly: boolean
     @param macros: set of macros for the build
     @type macros: dict
     @param targetLabel: label to use for the cooked troves; it is used
@@ -320,7 +323,8 @@ def cookObject(repos, cfg, recipeClass, sourceVersion,
                                 alwaysBumpCount = alwaysBumpCount, 
                                 ignoreDeps = ignoreDeps, logBuild = logBuild,
                                 crossCompile = crossCompile,
-                                requireCleanSources = requireCleanSources)
+                                requireCleanSources = requireCleanSources,
+                                downloadonly = downloadonly)
     elif recipeClass.getType() == recipe.RECIPE_TYPE_REDIRECT:
 	ret = cookRedirectObject(repos, db, cfg, recipeClass,  sourceVersion,
 			      macros = macros, targetLabel = targetLabel,
@@ -337,7 +341,7 @@ def cookObject(repos, cfg, recipeClass, sourceVersion,
     else:
         raise AssertionError
 
-    # cook*Object returns None if using prep
+    # cook*Object returns None if using prep or downloadonly
     if ret is None:
         return []
     
@@ -652,7 +656,8 @@ def cookPackageObject(repos, db, cfg, recipeClass, sourceVersion, prep=True,
 		      macros={}, targetLabel = None, 
                       resume = None, alwaysBumpCount=False, 
                       ignoreDeps=False, logBuild=False, crossCompile = None,
-                      requireCleanSources = False):
+                      requireCleanSources = False,
+                      downloadonly = False):
     """
     Turns a package recipe object into a change set. Returns the absolute
     changeset created, a list of the names of the packages built, and
@@ -670,6 +675,9 @@ def cookPackageObject(repos, db, cfg, recipeClass, sourceVersion, prep=True,
     @param prep: If true, the build stops after the package is unpacked
     and None is returned instead of a changeset.
     @type prep: boolean
+    @param downloadonly: If true, the lookaside is populated, and the None is
+    returned instead of a changeset.
+    @type downloadonly: boolean
     @param macros: set of macros for the build
     @type macros: dict
     @param targetLabel: label to use for the cooked troves; if None (the
@@ -683,7 +691,7 @@ def cookPackageObject(repos, db, cfg, recipeClass, sourceVersion, prep=True,
     # 1. create the desired files in destdir and package info
     enforceManagedPolicy = (cfg.enforceManagedPolicy
                             and targetLabel != versions.CookLabel()
-                            and not prep)
+                            and not prep and not downloadonly)
 
     result  = _cookPackageObject(repos, cfg, recipeClass, 
                                  sourceVersion, prep=prep,
@@ -692,7 +700,8 @@ def cookPackageObject(repos, db, cfg, recipeClass, sourceVersion, prep=True,
                                  logBuild=logBuild, 
                                  crossCompile=crossCompile,
                                  enforceManagedPolicy=enforceManagedPolicy,
-                                 requireCleanSources = requireCleanSources)
+                                 requireCleanSources = requireCleanSources,
+                                 downloadonly = downloadonly)
     if type(result) is not tuple:
         return
 
@@ -710,7 +719,8 @@ def cookPackageObject(repos, db, cfg, recipeClass, sourceVersion, prep=True,
 def _cookPackageObject(repos, cfg, recipeClass, sourceVersion, prep=True, 
 		       macros={}, resume = None, ignoreDeps=False, 
                        logBuild=False, crossCompile=None, 
-                       enforceManagedPolicy=False,  requireCleanSources = False):
+                       enforceManagedPolicy=False,  requireCleanSources = False,
+                       downloadonly = False):
     """Builds the package for cookPackageObject.  Parameter meanings are 
        described there.
     """
@@ -829,10 +839,11 @@ def _cookPackageObject(repos, cfg, recipeClass, sourceVersion, prep=True,
             recipeObj.mainDir(maindir)
         if resume is True:
             resume = bldInfo.lastline
-        recipeObj.unpackSources(builddir, destdir, resume)
 
-        # if we're only extracting, continue to the next recipe class.
-        if prep:
+        recipeObj.unpackSources(builddir, destdir, resume, downloadonly=downloadonly)
+
+        # if we're only extracting or downloading, continue to the next recipe class.
+        if prep or downloadonly:
             return recipeObj
 
         cwd = os.getcwd()
@@ -1200,7 +1211,8 @@ def getRecipeInfoFromPath(repos, cfg, recipeFile):
 def cookItem(repos, cfg, item, prep=0, macros={}, 
 	     emerge = False, resume = None, allowUnknownFlags = False,
              showBuildReqs = False, ignoreDeps = False, logBuild = False,
-             crossCompile = None, callback = None, requireCleanSources = None):
+             crossCompile = None, callback = None, requireCleanSources = None,
+             downloadonly = False):
     """
     Cooks an item specified on the command line. If the item is a file
     which can be loaded as a recipe, it's cooked and a change set with
@@ -1217,6 +1229,9 @@ def cookItem(repos, cfg, item, prep=0, macros={},
     @param prep: If true, the build stops after the package is unpacked
     and None is returned instead of a changeset.
     @type prep: boolean
+    @param downloadonly: If true, the lookaside is populated, and the None is
+    returned instead of a changeset.
+    @type downloadonly: boolean
     @param macros: set of macros for the build
     @type macros: dict
     """
@@ -1296,7 +1311,8 @@ def cookItem(repos, cfg, item, prep=0, macros={},
                             logBuild=logBuild,
                             crossCompile=crossCompile,
                             callback=callback,
-                            requireCleanSources=requireCleanSources)
+                            requireCleanSources=requireCleanSources,
+                            downloadonly = downloadonly)
         if troves:
             built = (tuple(troves), changeSetFile)
     except errors.RepositoryError, e:
@@ -1310,7 +1326,7 @@ def cookCommand(cfg, args, prep, macros, emerge = False,
                 resume = None, allowUnknownFlags = False,
                 showBuildReqs = False, ignoreDeps = False,
                 profile = False, logBuild = True,
-                crossCompile = None, cookIds=None):
+                crossCompile = None, cookIds=None, downloadonly=False):
     # this ensures the repository exists
     client = conaryclient.ConaryClient(cfg)
     repos = client.getRepos()
@@ -1373,9 +1389,10 @@ def cookCommand(cfg, args, prep, macros, emerge = False,
                              showBuildReqs = showBuildReqs,
                              ignoreDeps = ignoreDeps, logBuild = logBuild,
                              crossCompile = crossCompile,
-                             callback = CookCallback())
+                             callback = CookCallback(),
+                             downloadonly = downloadonly)
             if built is None:
-                # --prep or perhaps an error was logged
+                # --prep or --download or perhaps an error was logged
                 if log.errorOccurred():
                     sys.exit(1)
                 sys.exit(0)
